<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.CadastrarAnuncioActivity" android:orientation="vertical" android:padding="16dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center" android:layout_marginBottom="16dp"
    >
        <include
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="100dp"
                layout="@layout/recycler_view_layout" android:layout_weight="1" android:background="@drawable/padrao"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_margin="4dp">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_insert_photo_24"
                    android:id="@+id/ivGallery" android:layout_margin="4dp"
                    android:contentDescription="@string/gallery"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_photo_camera_24"
                    android:id="@+id/ivCamera" android:layout_margin="4dp" android:contentDescription="@string/camera"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginBottom="16dp">
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="48dp" android:id="@+id/spinnerEstados" android:layout_weight="1"
                tools:contentDescription="UF" android:spinnerMode="dropdown" android:dropDownWidth="wrap_content"
                android:entries="@array/estados"/>
        <Spinner
                android:layout_width="match_parent" android:contentDescription="@string/category"
                android:layout_height="48dp" android:id="@+id/spinnerCategoria" android:layout_weight="1"
                android:spinnerMode="dropdown" android:dropDownWidth="wrap_content" android:entries="@array/categorias"/>
    </LinearLayout>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:hint="@string/title"
            android:ems="10"
            android:id="@+id/etTitle" android:background="@drawable/bg_edit_text"
            android:padding="10dp"
            android:layout_marginBottom="16dp" android:autofillHints="name"/>
    <com.blackcat.currencyedittext.CurrencyEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:hint="@string/values"
            android:ems="10"
            android:padding="10dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/etValue" android:background="@drawable/bg_edit_text"/>
    <com.santalu.maskedittext.MaskEditText android:layout_width="match_parent" android:layout_height="wrap_content"
                                           android:id="@+id/etPhoneNumber"
                                           android:hint="@string/hint_phone_number"
                                           android:ems="10"
                                           android:padding="10dp"
                                           android:layout_marginBottom="16dp"
                                           android:background="@drawable/bg_edit_text"
                                           android:inputType="phone"
                                           app:met_mask="(##) #####-####" android:minHeight="48dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:padding="10dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/description"
            android:id="@+id/etDescription" android:background="@drawable/bg_edit_text" android:autofillHints=""/>
    <Button
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnCadastrar" android:onClick="salvarAnuncio"
            android:enabled="false"/>
</LinearLayout>