<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AccessActivity">

    <Button
            android:text="@string/access"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btnAccess"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" tools:enabled="true"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etLoginEmail" app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etLoginEmail"
            android:hint="@string/e_mail"
            android:minHeight="48dp"
            android:background="@drawable/bg_edit_text"
            android:padding="8dp" android:autofillHints="emailAddress"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/etLoginPassword" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" android:layout_marginBottom="4dp" android:layout_marginTop="4dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etLoginPassword"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:background="@drawable/bg_edit_text"
            android:padding="8dp" android:autofillHints="password"
            app:layout_constraintTop_toBottomOf="@+id/etLoginEmail"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" android:layout_marginTop="4dp" android:layout_marginBottom="4dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/etLoginPassword"
            app:layout_constraintBottom_toTopOf="@+id/btnAccess" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" android:layout_marginTop="4dp" android:layout_marginBottom="4dp">
        <TextView
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"/>
        <Switch
                android:layout_width="48dp"
                android:layout_height="48dp" android:id="@+id/swAccess"
                android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
        <TextView
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2"/>
    </LinearLayout>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginProgressBar"
            android:visibility="gone" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>